--- a/style.scss
+++ b/style.scss
@@ -133,3 +133,147 @@ figure {
     text-align: center;
   }
 }
+
+/* [LIST VIEW] */
+
+.list_view,
+.card__list {
+  @include --clear-space;
+  width: 100%;
+
+  overflow: hidden;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  padding: 16px;
+}
+
+img {
+  @include --image-cover;
+  @include size(50px, 50px);
+}
+/* [CARD] */
+.card {
+  &__item {
+    @include flex;
+    @include --radius(12);
+    @include size(100%, 165px);
+    @include --clear-space;
+    margin: 16px 0;
+
+    cursor: pointer;
+    box-shadow: 0 0.2rem 0.1rem rgba($c-secondary, 0.3);
+    &:hover {
+      transform: scale(1.03);
+      box-shadow: 0 0.5rem 0.3rem rgba($c-secondary, 0.6);
+    }
+
+    // MARK : theme 2
+    background: $c-white;
+  }
+  &__detail {
+    @include flex(column);
+
+    @include size(60%);
+    padding: 16px;
+    padding-left: 2px;
+    order: 1;
+  }
+  &__profile {
+    @include relative;
+    @include size(40%);
+    padding: 12px;
+  }
+  &__image {
+    @include --image-cover;
+    @include --radius(8);
+  }
+  &__state {
+    $s-1: #ffd428;
+    $s-2: #f78361;
+    $s-3: #f54b64;
+    $s-4: #2d3448;
+    @include size(15px, 15px);
+    @include --radius(10);
+    @include absolute($top: 7px, $right: 7px);
+
+    &--state_1 {
+      background: $s-1;
+    }
+    &--state_2 {
+      background: $s-2;
+    }
+    &--state_3 {
+      background: $s-3;
+    }
+    &--state_4 {
+      background: $s-4;
+    }
+  }
+
+  &__header {
+    @include flex(column);
+    @include height(70px);
+
+    h3 {
+      @include --clear-space;
+    }
+
+    span {
+      font-size: 0.87rem;
+    }
+
+    line-height: 26px;
+  }
+
+  &__table {
+    @include flex(column);
+    @include width(100%);
+    @include height(64px);
+    @include --clear-space;
+    // margin-top: 12px;
+    padding: 4px;
+    padding-top: 9px;
+
+    &,
+    thead,
+    tbody {
+      @include --radius;
+      text-align: center;
+      // MARK : theme 3
+      background: $c-gray;
+      color: $c-secondary;
+    }
+
+    thead {
+      @include size(100%, 20px);
+      font-size: 0.74rem;
+    }
+    tbody {
+      @include size(100%, 30px);
+    }
+
+    th {
+      font-weight: 600;
+    }
+
+    tr {
+      @include flex;
+      @include aligns(space-around);
+      @include size(100%);
+    }
+    td {
+      // font-weight: 900;
+      font-size: 1.03rem;
+    }
+
+    tr {
+      @include flex;
+      @include align(space-around);
+    }
+
+    th,
+    td {
+      @include width(50%);
+    }
+  }
+}
